Added Pump Print.

--- a/sensor_config.ini
+++ b/sensor_config.ini
@@ -1,18 +1,23 @@
 [Sensor0]
-calibration_output = 668
+calibration_output_air = 828.03
+calibration_output_water = 226.18
 
 [Sensor1]
-calibration_output = 662
+calibration_output_air = 828.03
+calibration_output_water = 254.52
 
 [Sensor2]
-calibration_output = 661
+calibration_output_air = 828.03
+calibration_output_water = 249.64
 
 [Sensor3]
-calibration_output = 670
+calibration_output_air = 844.64
+calibration_output_water = 350.27
 
 [Sensor4]
-calibration_output = 661
+calibration_output_air = 840.76
+calibration_output_water = 319.97
 
 [Sensor5]
-calibration_output = 686
-
+calibration_output_air = 844.64
+calibration_output_water = 347.33
